k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: batch
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: batch
        tier: backend
    spec:
      containers:
      - name: go-batch
        image: gcr.io/cyberagent-018/go-batch:v1
        ports:
        - containerPort: 8080
          protocol: TCP
        imagePullPolicy: Always
