k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: batch
  labels:
    name: batch
spec:
  selector:
    name: batch
  type: LoadBalancer
  ports:
    - port: 80
      name: http
      targetPort: 80
